--- a/style.css
+++ b/style.css
@@ -26,15 +26,31 @@ ul {
 
 .description {
     display: flex;
-    flex-direction: column;
+}
+
+.image {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.description-title {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.description-body {
+    max-width: 400px;
+    padding: 20px 0px 20px 0px;
 }
 
 .suggestion {
     display: flex;
     align-items: center;
     font-size: 24px;
-    width: min-content;
-    border-radius: 4px;
+    max-width: max-content;
+    min-width: min-content;
+    border-radius: 8px;
     background-color: #3882f6;
     color: #e5e7eb;
     border-style: none;
@@ -78,33 +94,58 @@ ul {
 
 }
 
+/*.section3 {
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    width: 1000px;
+    justify-content: center;
+    background-color: #3882f6;
+    margin: 100px;
+}*/
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .section3 {
     display: flex;
     justify-content: center;
-    margin: 25px 100px;
-    padding: 50px 50px;
+    align-items: center;
     background-color: #3882f6;
+    padding: 25px 100px;
+    margin: 25px 100px;
+    max-width: fit-content;
+    flex-wrap: wrap;
     border-radius: 8px;
-    color: white;
+    color: #e5e7eb;
+
 }
 
 .section3-wrapper {
     display: flex;
     flex-direction: column;
-    padding-right: 20px;
+    padding-right: 100px;
 }
 
 .section3-title {
     display: flex;
-    font-size: 30px;
+    font-size: 24px;
+    font-weight: 900;
 }
 
 .section3-info {
+    max-width: 400px;
+    padding-bottom: 10px;
 
 }
 
 .section3-button {
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 24px;
     border-radius: 8px;
@@ -112,6 +153,9 @@ ul {
     color: #e5e7eb;
     border-color: #e5e7eb;
     border-style: solid;
+    border-width: 2px;
+    padding: 10px;
+    max-height: 40px;
 }
 
 .footer {
