--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ ul {
     gap: 16px;
 }
 
+img {
+    max-width: 100%;
+    max-height: 400px;
+}   
+
 .leftlinks {
     display: flex;
     font-weight: 900;
@@ -35,7 +40,7 @@ ul {
 }
 
 .description-title {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: 700;
 }
 
