--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ img {
     display: flex;
     font-weight: 900;
     font-size: 24px;
+    padding-right: 10px;
 
 }
 
@@ -152,6 +153,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
     font-size: 24px;
     border-radius: 8px;
     background-color: #3882f6;
@@ -161,6 +163,7 @@ img {
     border-width: 2px;
     padding: 10px;
     max-height: 40px;
+    
 }
 
 .footer {
