--- a/style.css
+++ b/style.css
@@ -13,10 +13,19 @@ ul {
     gap: 16px;
 }
 
-img {
-    max-width: 100%;
-    max-height: 400px;
-}   
+.img0 {
+    max-height: 200px;
+    max-width: 100%; 
+}
+
+.pics {
+    display: flex;
+    margin-bottom: 10px;
+    border-color: #3882f6;
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 8px;
+}
 
 .leftlinks {
     display: flex;
@@ -37,7 +46,8 @@ img {
 .image {
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    justify-content: end;
+    padding-left: 10px;
 }
 
 .description-title {
@@ -63,21 +73,27 @@ img {
 
 }
 
-.destinations {
-    display: flex;
-    padding: 25px 50px;
-}
-
 .section1 {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: row;
     padding: 50px 50px;
-}
-
-.section-title {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
+}
+
+.location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 25px;
+    flex-wrap: wrap;
+    border-radius: 8px;
+    text-align: center;
+   
 }
 
 .section2 {
@@ -89,6 +105,7 @@ img {
     color: #1f2937;
     padding: 50px 200px;
     background-color: #e5e7eb;
+
 }
 
 .author {
