--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+    min-height: 100dvh;
+}
+
 .header, .description {
     display: flex;
     justify-content: space-between;
